# tfg_2022

./: README.md  rew-syntax-checker.cabal
examples/TPDB/: AC08.trs  accept1.trs  xmlTest.trs  xtc.xsd
examples/TPDB/TRS.AG01/: #3.14.trs
examples/TPDB/xml/: trsCond_xml.xml  trs_xml_01.xml  xmlTest.xml
src/: Main.hs
src/Interface/: CLI.hs  Library.hs
src/Parser/: Grammar.hs  Parser.hs
src/Parser/TPDB/: Grammar.hs  Parser.hs
tests/COPS/: conmutation.trs  csr-example1.trs  csr-example2.trs
tests/COPS/TRS/: 1.trs  1000.trs  1001.trs  1003.trs  1009.trs  1011.trs  1012.trs  1014.trs  1016.trs  1017.trs  1019.trs  102.trs  1021.trs  1024.trs  1026.trs  1028.trs  103.trs  1036.trs  105.trs  106.trs  107.trs  108.trs  109.trs  11.trs  111.trs  1129.trs  113.trs  1132.trs  1133.trs  115.trs  1151.trs  1155.trs  1157.trs  116.trs  118.trs  119.trs  120.trs  121.trs  122.trs  125.trs  (+236 more)
tests/COPS/error/: TRS.575.trs
tests/COPS/files_with_error/: CTRS.265 - extra variables in the rule App(I,x) - y.trs  CTRS.309 -  extra variables in the rule imul(0) - tp2(0,y).trs  CTRS.314- extra variables in the rule imult(0) - tp2(0,y).trs  CTRS.318 -  extra variables in the rule imult(0) - tp2(0,y).trs  CTRS.320 - extra variables in the rule A - h(x,x).trs  eTRS.393 - unexpected variable in the left-hand side of the rule x - f(x).trs  eTRS.396 - unexpected variable in the left-hand side of the rule x - f(x).trs  eTRS.397- unexpected extra variables in the rule f(x,y) - f(z,z).trs  eTRS.399- unexpected extra variables in the rule app(x,y) - app(app(x,y),z).trs  (+1 more)
(+2225 files in other folders)
